--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/tlantz77/react-starter-boilerplate/issues"
   },
-  "homepage": "https://github.com/tlantz77/react-starter-boilerplate#readme"
+  "homepage": "https://github.com/tlantz77/react-starter-boilerplate#readme",
+  "devDependencies": {
+    "@babel/cli": "7.10.3",
+    "@babel/core": "7.10.3",
+    "@babel/preset-env": "7.10.3",
+    "@babel/preset-react": "7.10.1"
+  }
 }
