--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Starter React boilerplate",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode development",
+    "clean": "rm -rf dist && rm -rf node_modules && npm i",
     "start": "webpack-dev-server --mode development",
     "test": "jest"
   },
