--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "react-starter-boilerplate",
+  "name": "react-start-boilerplate",
   "version": "1.0.0",
-  "description": "Starter React boilerplate",
+  "description": "React Starter Boilerplate",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "clean": "rm -rf dist && rm -rf node_modules && npm i",
+    "clean": "rm -rf dist && rm -rf node_modules",
+    "clean-install": "rm -rf dist && rm -rf node_modules && npm i",
     "start": "webpack-dev-server --mode development",
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tlantz77/react-starter-boilerplate.git"
+    "url": "git+https://github.com/tlantz77/game-collector.git"
   },
   "author": "Tim Lantz",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tlantz77/react-starter-boilerplate/issues"
+    "url": "https://github.com/tlantz77/game-collector/issues"
   },
-  "homepage": "https://github.com/tlantz77/react-starter-boilerplate#readme",
+  "homepage": "https://github.com/tlantz77/game-collector#readme",
   "devDependencies": {
     "@babel/cli": "7.10.3",
     "@babel/core": "7.10.3",
@@ -26,14 +27,23 @@
     "@babel/preset-react": "7.10.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "jest": "^26.4.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>src/setupTests.js"
+    ]
   }
 }
